force-app/main/default/objects/Shared_Document__c/Shared_Document__c.object-meta.xml
<CustomObject>
    <description>Tracks documents shared to an app user’s mobile application and controls whether they are visible on the device.</description>
    <label>Shared Document</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Shared Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>