force-app/main/default/objects/Shared_Document__c/fields/App_User__c.field-meta.xml
<CustomField>
    <fullName>App_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The App User this document is shared with.</description>
    <inlineHelpText>Select the app user who should receive this shared document.</inlineHelpText>
    <label>App User</label>
    <referenceTo>App_User__c</referenceTo>
    <relationshipLabel>Shared Documents</relationshipLabel>
    <relationshipName>Shared_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>