force-app/main/default/objects/Shared_Document__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact whose file is being shared.</description>
    <inlineHelpText>Select the contact whose document is being shared.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shared Documents</relationshipLabel>
    <relationshipName>Shared_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>