force-app/main/default/objects/Shared_Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>Stores the Salesforce ContentDocumentId (18-character). Used as a unique key to prevent duplicate sharing records.</description>
    <inlineHelpText>Enter the Salesforce ContentDocument ID for the file being shared.</inlineHelpText>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>