force-app/main/default/objects/Shared_Document__c/fields/Visible_On_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Visible_On_Mobile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, this document is visible to the App User on the mobile application.</description>
    <inlineHelpText>Enable this to make the shared document visible in the mobile app.</inlineHelpText>
    <label>Visible On Mobile</label>
    <type>Checkbox</type>
</CustomField>